--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "description": "",
   "dependencies": {
     "jest": "^29.5.0",
+    "socket.io": "^4.7.1",
+    "socket.io-client": "^4.7.1",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1"
   }
