--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start:rover": "ts-node src/main-rover.ts",
+    "start:mission": "ts-node src/main-missionControl.ts",
     "test": "jest"
   },
   "author": "",
