--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "class-transformer": "^0.5.1",
     "jest": "^29.5.0",
     "socket.io": "^4.7.1",
     "socket.io-client": "^4.7.1",
