--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "start:rover": "ts-node src/main-rover.ts",
     "start:mission": "ts-node src/main-missionControl.ts",
+    "start": "concurrently \"npm run start:rover\" \"npm run start:mission\"",
     "test": "jest"
   },
   "author": "",
@@ -16,6 +17,7 @@
   "description": "",
   "dependencies": {
     "class-transformer": "^0.5.1",
+    "concurrently": "^8.2.0",
     "jest": "^29.5.0",
     "socket.io": "^4.7.1",
     "socket.io-client": "^4.7.1",
