--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "typescript": "^5.0.4"
   },
@@ -16,8 +17,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "class-transformer": "^0.5.1",
     "concurrently": "^8.2.0",
+    "express": "^4.18.2",
     "jest": "^29.5.0",
     "socket.io": "^4.7.1",
     "socket.io-client": "^4.7.1",
